[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mistbuddy-lite"
version = "0.0.1"
description = "Simple MQTT Mist Controller with Light Check"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0,<3.0.0"
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
mistbuddy-lite = "src.app:main"
